--- a/Technomarkt_Ecommerce/UI/UI.csproj
+++ b/Technomarkt_Ecommerce/UI/UI.csproj
@@ -171,6 +171,8 @@
     <Compile Include="Models\ContactVM.cs" />
     <Compile Include="Models\LoginVM.cs" />
     <Compile Include="Models\RegisterVM.cs" />
+    <Compile Include="Models\Wishlist.cs" />
+    <Compile Include="Models\WishlistItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ImageUploader.cs" />
     <Compile Include="Utils\MailSender.cs" />
@@ -213,6 +215,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\MyCart.cshtml" />
     <Content Include="Views\Home\ProductDetails.cshtml" />
+    <Content Include="Views\Home\Wishlist.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
