User role tables created, db updated

--- a/Technomarkt_Ecommerce/DAL/DAL.csproj
+++ b/Technomarkt_Ecommerce/DAL/DAL.csproj
@@ -53,6 +53,8 @@
   <ItemGroup>
     <Compile Include="Context\ApplicationContext.cs" />
     <Compile Include="Entity\AppUser.cs" />
+    <Compile Include="Entity\AppUserAndRole.cs" />
+    <Compile Include="Entity\AppUserRole.cs" />
     <Compile Include="Entity\Brand.cs" />
     <Compile Include="Entity\Category.cs" />
     <Compile Include="Entity\Order.cs" />
