--- a/Technomarkt_Ecommerce/Service/Service.csproj
+++ b/Technomarkt_Ecommerce/Service/Service.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base\BaseService.cs" />
+    <Compile Include="Concrete\AppUserRoleService.cs" />
     <Compile Include="Concrete\AppUserService.cs" />
     <Compile Include="Concrete\BrandService.cs" />
     <Compile Include="Concrete\CategoryService.cs" />
