--- a/Technomarkt_Ecommerce/UI/Web.config
+++ b/Technomarkt_Ecommerce/UI/Web.config
@@ -19,8 +19,14 @@
     <httpRuntime targetFramework="4.7.2" />
 
 	  <authentication mode="Forms">
-		  <forms loginUrl="~/Home/Login" slidingExpiration="false"></forms>
+		  <forms loginUrl="~/Home/Login" slidingExpiration="true" timeout="10"></forms>
 	  </authentication>
+
+	  <roleManager defaultProvider="userRoleProvider" enabled="true">
+		  <providers>
+			  <add name="userRoleProvider" type="UI.Utils.AppUserRoleProvider"/>
+		  </providers>
+	  </roleManager>
 	  
   </system.web>
   <runtime>
