--- a/Technomarkt_Ecommerce/UI/bin/UI.dll.config
+++ b/Technomarkt_Ecommerce/UI/bin/UI.dll.config
@@ -17,6 +17,17 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+
+	  <authentication mode="Forms">
+		  <forms loginUrl="~/Home/Login" slidingExpiration="false"></forms>
+	  </authentication>
+
+	  <roleManager defaultProvider="userRoleProvider" enabled="true">
+		  <providers>
+			  <add name="userRoleProvider" type="UI.Utils.AppUserRoleProvider"/>
+		  </providers>
+	  </roleManager>
+	  
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
