--- a/Technomarkt_Ecommerce/UI/bin/UI.dll.config
+++ b/Technomarkt_Ecommerce/UI/bin/UI.dll.config
@@ -19,7 +19,7 @@
     <httpRuntime targetFramework="4.7.2" />
 
 	  <authentication mode="Forms">
-		  <forms loginUrl="~/Home/Login" slidingExpiration="false"></forms>
+		  <forms loginUrl="~/Home/Login" slidingExpiration="true" timeout="10"></forms>
 	  </authentication>
 
 	  <roleManager defaultProvider="userRoleProvider" enabled="true">
