--- a/Technomarkt_Ecommerce/UI/UI.csproj
+++ b/Technomarkt_Ecommerce/UI/UI.csproj
@@ -113,14 +113,18 @@
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\css\styles.css" />
     <Content Include="Content\img\asus-zenbook.jpg" />
+    <Content Include="Content\img\discover.jpg" />
     <Content Include="Content\img\hpenvy-13.jpg" />
     <Content Include="Content\img\iphonepro-12.jpg" />
     <Content Include="Content\img\iphonepro-13.jpg" />
     <Content Include="Content\img\macbook-pro.jpg" />
     <Content Include="Content\img\macbook1.png" />
     <Content Include="Content\img\macbookpro-16.jpg" />
+    <Content Include="Content\img\mastercard.png" />
+    <Content Include="Content\img\paypal.jpg" />
     <Content Include="Content\img\samsung-zfold3.jpg" />
     <Content Include="Content\img\samsung1.png" />
+    <Content Include="Content\img\visa.png" />
     <Content Include="Content\img\Zenbook-14.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
