--- a/Technomarkt_Ecommerce/Service/Service.csproj
+++ b/Technomarkt_Ecommerce/Service/Service.csproj
@@ -60,7 +60,10 @@
     <Compile Include="Concrete\OrderService.cs" />
     <Compile Include="Concrete\ProductService.cs" />
     <Compile Include="Concrete\SubCategoryService.cs" />
+    <Compile Include="Concrete\SupplierOrderDetailService.cs" />
+    <Compile Include="Concrete\SupplierOrderService.cs" />
     <Compile Include="Concrete\SupplierService.cs" />
+    <Compile Include="Concrete\UserCommentService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
