--- a/Technomarkt_Ecommerce/UI/UI.csproj
+++ b/Technomarkt_Ecommerce/UI/UI.csproj
@@ -122,6 +122,7 @@
     <Content Include="Content\img\macbookpro-16.jpg" />
     <Content Include="Content\img\mastercard.png" />
     <Content Include="Content\img\paypal.jpg" />
+    <Content Include="Content\img\PlayStation-5.jpg" />
     <Content Include="Content\img\samsung-zfold3.jpg" />
     <Content Include="Content\img\samsung1.png" />
     <Content Include="Content\img\visa.png" />
