--- a/Technomarkt_Ecommerce/UI/UI.csproj
+++ b/Technomarkt_Ecommerce/UI/UI.csproj
@@ -166,6 +166,8 @@
     <Content Include="Areas\Admin\Views\Home\Checkout.cshtml" />
     <Content Include="Areas\Admin\Views\Home\OrderComplete.cshtml" />
     <Content Include="Areas\Admin\Views\SupplierOrder\Index.cshtml" />
+    <Content Include="Areas\Accountant\Views\SupplierOrder\Index.cshtml" />
+    <Content Include="Areas\Depot\Views\SupplierOrder\Index.cshtml" />
     <None Include="Scripts\jquery-3.6.0-vsdoc.js" />
     <Content Include="Scripts\jquery-3.6.0.js" />
     <Content Include="Scripts\jquery-3.6.0.min.js" />
@@ -177,6 +179,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Accountant\AccountantAreaRegistration.cs" />
     <Compile Include="Areas\Accountant\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Accountant\Controllers\SupplierOrderController.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\BrandController.cs" />
     <Compile Include="Areas\Admin\Controllers\CategoryController.cs" />
@@ -187,6 +190,7 @@
     <Compile Include="Areas\Admin\Controllers\SupplierController.cs" />
     <Compile Include="Areas\Admin\Controllers\SupplierOrderController.cs" />
     <Compile Include="Areas\Depot\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Depot\Controllers\SupplierOrderController.cs" />
     <Compile Include="Areas\Depot\DepotAreaRegistration.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -243,13 +247,8 @@
     <Content Include="Views\Home\Register.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\MyCart.cshtml" />
     <Content Include="Views\Home\ProductDetails.cshtml" />
     <Content Include="Views\Home\Wishlist.cshtml" />
-    <Content Include="Views\Home\BillingDetails.cshtml" />
-    <Content Include="Views\Home\Checkout.cshtml" />
-    <Content Include="Views\Home\OrderComplete.cshtml" />
-    <Content Include="Views\Home\UserOrders.cshtml" />
     <Content Include="Views\Order\Index.cshtml" />
     <Content Include="Views\Cart\Index.cshtml" />
     <Content Include="Views\Cart\OrderComplete.cshtml" />
