--- a/Technomarkt_Ecommerce/UI/packages.config
+++ b/Technomarkt_Ecommerce/UI/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="MimeKit" version="3.3.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="PayPal" version="1.9.1" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net472" />
